# agentkit

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  Cargo.toml  README.md  ROADMAP.md  deny.toml  justfile  resolve-dependabot.sh  sample.envrc  switchboard-e2e.toml
.agents/skills/document/: SKILL.md
.agents/skills/fetch-remote/: SKILL.md
.agents/skills/github-actions/: SKILL.md
.agents/skills/installing-packages/: SKILL.md
.agents/skills/pr-check-failure/: SKILL.md
.agents/skills/skill-authoring/: SKILL.md
.agents/skills/switch-branch/: SKILL.md
.github/: dependabot.yaml
.github/actions/check-pr-body/: action.yaml
.github/actions/litterbox-deps-ubuntu/: action.yml
.github/actions/setup-nix/: action.yaml  setup-nix-git-config.bats  setup-nix-git-config.sh  setup-nix.sh
.github/actions/setup-rust/: setup-rust.sh
.github/codeql/: codeql-config.yaml
.github/workflows/: agentkit.build-and-release.yaml  agentkit.build-and-test.yaml  check-names.bats  check-names.sh  docs.build-and-deploy.yaml  docs.build.yaml  docs.deploy.yaml  merge-queue.yaml  merge-to-main.yaml  mod.just  nix.lint.yaml  nix.update-hashes.yaml  pull-request.yaml  release.yaml  workflows.lint.yaml
.github/workflows/agentkit.build-and-release/: prepare-macos-sdk.bats  prepare-macos-sdk.sh
.github/workflows/nix.lint/: nix-flake-check.sh
.github/workflows/nix.update-hashes/: commit-and-push-hash-update.bats  commit-and-push-hash-update.sh  update-cargo-hash.bats  (+1 more)
.opencode/: opencode.jsonc  run.sh
adrs/2026-04-28-acp-server/: Cargo.toml  plan.md  spec.md  tasks.md
adrs/2026-04-28-acp-server/acp-spec/: schema.mdx  session-setup.mdx
adrs/2026-04-28-acp-server/src/: config.rs  error.rs  jsonrpc.rs  main.rs
adrs/2026-04-28-acp-server/src/handlers/: mod.rs
adrs/2026-04-28-acp-server/src/session/: session.rs  store.rs
adrs/2026-04-28-acp-server/src/transports/: http.rs  mod.rs  stdio.rs
adrs/2026-04-29-lens/: plan.md  spec.md  tasks.md
adrs/2026-05-24-lens-kagi/: plan.md  spec.md  tasks.md
adrs/2026-05-27-git-modes/: plan.md  spec.md  tasks.md
adrs/2026-06-13-acp-server-session-storage/: Cargo.toml  plan.md  spec.md  tasks.md
adrs/2026-06-13-acp-server-session-storage/migrations/: 001_sessions.sql  002_prompt_turns.sql  003_messages.sql
adrs/2026-06-13-acp-server-session-storage/src/: id.rs  lib.rs  test_helpers.rs  types.rs
adrs/2026-06-13-acp-server-session-storage/src/store/: memory.rs  mod.rs  sqlite.rs
adrs/2026-06-14-model-provider-sdk/: .gitignore  README.md  plan.md  spec.md  tasks.md
adrs/2026-06-14-model-provider-sdk/llm-sample/: Cargo.toml
adrs/2026-06-14-model-provider-sdk/llm-sample/src/: lib.rs  main.rs
adrs/2026-06-14-model-provider-sdk/rig-sample/: Cargo.toml
adrs/2026-06-14-model-provider-sdk/rig-sample/src/: lib.rs  main.rs  recording_client.rs
adrs/2026-06-14-model-provider-sdk/rig-sample/tests/: cassette_test.rs  live_test.rs
adrs/2026-06-14-model-provider-sdk/rig-sample/tests/cassettes/: echo_tool.json
adrs/2026-06-14-switchboard/: E2E_TESTING.md  plan.md  spec.md  tasks.md
adrs/2026-07-15-otel-impl/: .gitignore  plan.md  spec.md  tasks.md
adrs/2026-07-15-otel-impl/poc-otel/: Cargo.toml
adrs/2026-07-15-otel-impl/poc-otel/src/: lib.rs  log_layer.rs  main.rs  metrics.rs  setup.rs  traces.rs
adrs/2026-07-15-otel-impl/poc-otel/tests/: in_memory.rs
crates/agentkit-credentials/: Cargo.toml
crates/agentkit-credentials/src/: lib.rs
crates/agentkit-credentials/tests/: file.rs  keychain.rs
crates/agentkit-docgen/: Cargo.toml
crates/agentkit-lens/: Cargo.toml  ROADMAP.md
crates/agentkit-lens/src/: cache.rs  cache.rs.orig  config.rs  lib.rs  main.rs  mcp.rs  safety.rs
crates/agentkit-lens/src/brave/: engine.rs  mod.rs  types.rs
crates/agentkit-lens/src/kagi/: engine.rs  mod.rs  types.rs
crates/agentkit-lens/src/search/: mod.rs
crates/agentkit-litterbox/: Cargo.toml  ROADMAP.md
crates/agentkit-litterbox/src/: config.rs  config_loader.rs  lib.rs  main.rs  mcp.rs  metadata_store.rs
crates/agentkit-litterbox/src/domain/: mod.rs
crates/agentkit-litterbox/src/sandbox/: mod.rs
crates/agentkit-litterbox/src/scm/: mod.rs
crates/agentkit-litterbox/src/vcs_store/: mod.rs  path.rs  remote.rs
crates/agentkit-models/: Cargo.toml  build.rs
crates/agentkit-models/data/: .gitignore  models.dev.json
crates/agentkit-models/src/: lib.rs
crates/agentkit-path/: Cargo.toml
crates/agentkit-switchboard/: Cargo.toml  e2e.toml
crates/agentkit-switchboard/src/: cli.rs  lib.rs  main.rs
crates/agentkit-switchboard/src/auth/: mod.rs  openai_codex.rs
crates/agentkit-switchboard/src/config/: loader.rs  mod.rs
crates/agentkit-switchboard/src/credential/: env.rs  helper.rs  mod.rs
crates/agentkit-switchboard/src/db/: mod.rs
crates/agentkit-switchboard/src/db/migrations/: 001_session_schema.sql  002_models_table.sql  003_drop_degraded_providers.sql
crates/agentkit-switchboard/src/domain/: conversation.rs  http.rs  mod.rs  quota.rs  sse.rs
crates/agentkit-switchboard/src/models/: db.rs  mod.rs
crates/agentkit-switchboard/src/provider/: mod.rs  quota.rs  registry.rs  router.rs
crates/agentkit-switchboard/src/providers/: mod.rs
crates/agentkit-switchboard/src/providers/anthropic/: mod.rs  quota.rs
crates/agentkit-switchboard/src/providers/openai/: conversation.rs  mod.rs  quota.rs
crates/agentkit-switchboard/src/proxy/: forwarder.rs  mod.rs  translation.rs
crates/agentkit-switchboard/src/server/: middleware.rs  mod.rs  routes.rs
crates/agentkit-switchboard/src/session/: memory.rs  mod.rs  sqlite.rs
crates/agentkit-switchboard/tests/: config.rs  credential.rs  models.rs  proxy.rs  quota.rs  routing.rs  session.rs
crates/agentkit-switchboard/tests/fixtures/: bad-enum.toml  duplicate-identity.toml  minimal.toml  mock-helper.sh  oauth-config.toml  oauth-default-client.toml
docs/: .yarnrc.yml  docusaurus.config.ts  mod.just  package.json  resolve-dependabot.mjs  sidebars.ts
docs/docs/: intro.mdx
examples/litterbox-static-site/: .litterbox.toml
nix/: flake.nix  mod.just
scripts/: e2e-test.sh
(+76 files in other folders)
