[package]
name = "acp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["http1"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
