[package]
name = "acp-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }

[features]
default = []
sqlite = ["dep:sqlx"]
serde = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
