[package]
name = "agentkit-credentials"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
serde_json = "1"
sysinfo = "0.39"
keyring-core = "1"
agentkit-path = { path = "../agentkit-path" }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[[bin]]
name = "agentkit-credential-keychain"
path = "src/bin/agentkit-credential-keychain.rs"

[[bin]]
name = "agentkit-credential-file"
path = "src/bin/agentkit-credential-file.rs"
