[package]
name = "agentkit-lens"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
authors = ["Luke Carrier <luke@throwparty.com>"]
description = "MCP server for web search and URL fetching"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "warn"

[dependencies]
agentkit-docgen = { path = "../agentkit-docgen" }
async-trait = "0.1"
clap = { version = "4.5.23", features = ["derive"] }
html-to-markdown-rs = "3.3.3"
regex = "1.11"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls", "http2"] }
rmcp = { version = "0.14.0", features = ["macros", "schemars", "server", "transport-io"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
urlencoding = "2.1.3"

[dev-dependencies]
wiremock = "0.6"
