[package]
name = "agentkit-models"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
toml = "1"
