[package]
name = "agentkit-switchboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate"] }
oauth2 = { version = "5", default-features = false, features = ["reqwest", "pkce-plain"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
agentkit-models = { path = "../agentkit-models" }

[dev-dependencies]
wiremock = "0.6"
tracing-test = "0.2"
tempfile = "3"
