[package]
name = "llm-sample"
version = "0.1.0"
edition = "2021"

[lib]
name = "llm_sample"
path = "src/lib.rs"

[dependencies]
llm = { version = "1.3", features = ["openai"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
