[package]
name = "rig-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.38"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
